// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentClaimSection should render UI correctly 1`] = `
<body>
  <div>
    <div
      class="card-main large-section"
    >
      <div
        class="flex flex-col"
      >
        <h2
          class="title-2"
        >
          Recent Claims
        </h2>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-row flex flex-row align-top m-4 mt-8"
          >
            <img
              alt="Medical"
              class="icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <span
              style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-col flex flex-col flex-grow"
            >
              <p
                class="font-bold"
              >
                John Doe
              </p>
              <span
                class="body-1"
              >
                Visited on 
                02/06/2024
                , For 
                Chris James
              </span>
            </div>
            <div
              class="flex flex-row flex flex-col items-end"
            >
              <div
                class="success flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Processed
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-row flex flex-row align-top m-4 mt-8"
          >
            <img
              alt="Pharmacy"
              class="icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <span
              style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-col flex flex-col flex-grow"
            >
              <p
                class="font-bold"
              >
                John Does
              </p>
              <span
                class="body-1"
              >
                Visited on 
                01/06/2024
                , For 
                Aly Jame
              </span>
            </div>
            <div
              class="flex flex-row flex flex-col items-end"
            >
              <div
                class="neutral flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Pending
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-row flex flex-row align-top m-4 mt-8"
          >
            <img
              alt="Dental"
              class="icon"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
            <span
              style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
            />
            <div
              class="flex flex-col flex flex-col flex-grow"
            >
              <p
                class="font-bold"
              >
                John Doea
              </p>
              <span
                class="body-1"
              >
                Visited on 
                01/16/2024
                , For 
                Aly Jame
              </span>
            </div>
            <div
              class="flex flex-row flex flex-col items-end"
            >
              <div
                class="error flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Denied
                </p>
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <a
          class="block undefined"
        >
          <button
            class="flex flex-row link-container"
            style="max-width: max-content; height: auto;"
            tabindex="0"
          >
            <p
              class="link"
            >
              View All Claims
            </p>
          </button>
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`RecentClaimSection should render UI correctly for mobile device 1`] = `
<body>
  <div>
    <div
      class="card-main large-section"
    >
      <div
        class="flex flex-col"
      >
        <h2
          class="title-2"
        >
          Recent Claims
        </h2>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-col m-4"
          >
            <div
              class="flex flex-row"
            >
              <img
                alt="Medical"
                class="icon"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
              <p
                class="body-1"
              >
                John Doe
              </p>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
            <div
              class="flex flex-row justify-between"
            >
              <div
                class="success flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Processed
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
          </div>
        </div>
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-col m-4"
          >
            <div
              class="flex flex-row"
            >
              <img
                alt="Pharmacy"
                class="icon"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
              <p
                class="body-1"
              >
                John Does
              </p>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
            <div
              class="flex flex-row justify-between"
            >
              <div
                class="neutral flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Pending
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
          </div>
        </div>
        <div
          class="card-elevated cursor-pointer mb-4"
        >
          <div
            class="flex flex-col m-4"
          >
            <div
              class="flex flex-row"
            >
              <img
                alt="Dental"
                class="icon"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
              <span
                style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
              />
              <p
                class="body-1"
              >
                John Doea
              </p>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
            <div
              class="flex flex-row justify-between"
            >
              <div
                class="error flex flex-row justify-center items-center px-2 py-1 rounded"
              >
                <div
                  class="circle rounded-full w-3 h-3 aspect-square"
                />
                <p
                  class="font-bold ml-2 body-2"
                >
                  Denied
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <a
          class="block undefined"
        >
          <button
            class="flex flex-row link-container"
            style="max-width: max-content; height: auto;"
            tabindex="0"
          >
            <p
              class="link"
            >
              View All Claims
            </p>
          </button>
        </a>
      </div>
    </div>
  </div>
</body>
`;
